# llm-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
llm_mcp/: __init__.py
tests/: test_basic.py
