[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-mcp"
version = "1.0.0"
description = "LLM plugin for Model Context Protocol (MCP) integration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Eugene Pyvovarov", email = "eugene.pyvovarov@gmail.com"}
]
license = {text = "Apache-2.0"}
urls = {Homepage = "https://github.com/eugenepyvovarov/llm-mcp", Repository = "https://github.com/eugenepyvovarov/llm-mcp", Documentation = "https://github.com/eugenepyvovarov/llm-mcp#readme"}
keywords = ["llm", "mcp", "model-context-protocol", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "llm>=0.13.0",
    "aiofiles>=0.8.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.entry-points.llm]
mcp = "llm_mcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_mcp*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]